fix: webpack_output_to_certain_folders

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,3 +1,4 @@
 @import "./base/colors.scss";
 @import "./base/general.scss";
-@import "./pages/color_type.scss"
+@import "./pages/color_type.scss";
+@import "./pages/header_footer.scss";
