--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -3,12 +3,8 @@
 }
 
 body {
+  @include montserrat14;
   margin: 0;
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 24px;
   color: $dark-shade-75;
 }
 
@@ -31,11 +27,11 @@ h3 {
 }
 
 h1 {
-  @include quicksand24;
+  @include montserrat24;
 }
 
 h2 {
-  @include quicksand19;
+  @include montserrat19;
 }
 
 h3 {
