--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,3 @@
-@import "./base/colors.scss";
-@import "./base/general.scss";
-@import "./pages/color_type.scss";
-@import "./pages/header_footer.scss";
+@import './colors.scss';
+@import './fonts.scss';
+@import './general.scss';
